--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Fran’s Flowers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 
+  <h1>Fran’s Flowers</h1>
+  <p>Fresh, local flowers for every occasion.</p>
+
+</body>
+</html>
