--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
   <meta charset="UTF-8">
   <title>Fran’s Flowers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <header>
+    <h1>Fran’s Flowers</h1>
+    <p class="tagline">Fresh, local flowers for every occasion</p>
+  </header>
 
-  <h1>Fran’s Flowers</h1>
-  <p>Fresh, local flowers for every occasion.</p>
+  <main>
+    <section>
+      <h2>Welcome</h2>
+      <p>
+        Fran’s Flowers offers hand-arranged bouquets using locally sourced blooms.
+        Simple, clear ordering with no guesswork.
+      </p>
+    </section>
 
+    <section>
+      <h2>Today’s Specials</h2>
+      <ul>
+        <li>Seasonal Mixed Bouquet</li>
+        <li>Rose Classic Arrangement</li>
+        <li>Bright Spring Vase</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 Fran’s Flowers</p>
+  </footer>
 </body>
 </html>
-<link rel="stylesheet" href="style.css">
